# imt-rl-course

./: README.md  assign_1-1.html  assign_1-1.ipynb  assign_1-2.html  assign_1-2.ipynb  assign_2-1.html  assign_2-1.ipynb  assign_2-1c.html  assign_2-1c.ipynb  assign_2-2.html  assign_2-2.ipynb  assign_3_1a.html  assign_3_1a.ipynb  assign_3_1b.html  assign_3_1b.ipynb  assign_3_2.html  assign_3_2.ipynb  assign_3_3a.html  assign_3_3a.ipynb  assign_3_3b.html  assign_3_3b.ipynb  assign_4_1.html  assign_4_1.ipynb  assign_4_2.html  assign_4_2.ipynb  assign_4_3a.html  assign_4_3a.ipynb  assign_4_3abis.html  assign_4_3abis.ipynb  assign_4_3b.html  assign_4_3b.ipynb  assign_4_3bbis.html  assign_4_3bbis.ipynb  hello.py  pyproject.toml
jax_utils_stuff/: frozen_lake_sim.py  jax_basic.py  jax_haiku.py
jax_utils_stuff/__MACOSX/: ._frozen_lake_sim.py  ._jax_basic.py
saved_models/3/: model_params_DQN.npz  model_params_MC.npz  model_params_MC_A.npz  model_params_Q.npz  model_params_TD.npz  model_params_bTD.npz  model_params_sTD.npz
saved_models/4/: model_params_MC_A_dnn.npz  model_params_MC_A_lake.npz  model_params_MC_A_tab.npz  model_params_MC_dnn.npz  model_params_MC_lake.npz  model_params_MC_tab.npz  model_params_TD_dnn.npz  model_params_TD_tab.npz  model_params_dMC_lake.npz
